# ledfx-android

./: .gitmodules  README.md  ffigen.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/in/drdna/ledfx/: MainActivity.kt  NotificationHelper.kt  RecordingBridge.kt  RecordingService.kt
hook/: build.dart
lib/: aubio.dart  audio_bridge.dart  main.dart  utils.dart
lib/src/: core.dart  events.dart  virtual.dart
lib/src/devices/: ddp.dart  device.dart  dummy.dart  packets.dart  udp.dart  utils.dart  wled.dart
lib/src/effects/: audio.dart  audio_reactive.dart  const.dart  dsp.dart  effect.dart  gradient.dart  math.dart  mel_utils.dart  melbank.dart  temporal.dart  utils.dart  wavelength.dart
lib/src/platform/: audio_bridge.dart
lib/ui/: adaptive_layout.dart  device_page.dart  home_body.dart  settings_page.dart
lib/visualizer/: visualizer_service.dart
src/: CMakeLists.txt  config.h.in
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  task_runner.cpp  task_runner.h  utils.cpp  utils.h
